--- a/requirements.txt
+++ b/requirements.txt
@@ -37,10 +37,9 @@ fastchat==0.1.0
 ffmpy==0.3.2
 filelock==3.12.2
 flake8==7.0.0
-flash-attn==2.6.3
+flash-attn==2.5.8
 fonttools==4.40.0
 frozenlist==1.3.3
-transformers==4.43.0.dev0
 fsspec==2023.6.0
 gitdb==4.0.10
 GitPython==3.1.31
@@ -191,8 +190,9 @@ tokenizers==0.19.1
 tomli==2.0.1
 tomlkit==0.12.0
 toolz==0.12.1
-torch==2.2.0
+torch==2.1.0
 tqdm==4.65.0
+transformers==4.43.4
 triton==2.2.0
 trl==0.8.5
 typer==0.9.0
