--- a/requirements.txt
+++ b/requirements.txt
@@ -1,212 +1,163 @@
-accelerate==0.32.1
-aiofiles==23.2.1
-aiohttp==3.8.4
-aiosignal==1.3.1
-altair==5.2.0
-annotated-types==0.6.0
-anyio==4.3.0
-appdirs==1.4.4
-async-timeout==4.0.2
-attrs==23.1.0
-bitsandbytes==0.42.0
-black==23.1.0
-catboost==1.2.5
-certifi==2023.5.7
-charset-normalizer==3.1.0
-click==8.1.3
-cmake==3.26.4
-colorama==0.4.6
-contourpy==1.1.0
-cycler==0.11.0
-dataclasses-json==0.6.7
-datasets==2.18.0
-deepeval==0.21.74
-deepspeed==0.14.2
-Deprecated==1.2.14
-dill==0.3.6
-distro==1.9.0
-docker-pycreds==0.4.0
-docstring-parser==0.15
-docx2txt==0.8
-einops==0.7.0
-evaluate==0.4.1
-exceptiongroup==1.2.0
-execnet==2.1.1
-fastapi==0.110.0
-fastchat==0.1.0
-ffmpy==0.3.2
-filelock==3.12.2
-flake8==7.0.0
-flash-attn==2.5.8
-fonttools==4.40.0
-frozenlist==1.3.3
-fsspec==2023.6.0
-gitdb==4.0.10
-GitPython==3.1.31
-glob2==0.7
-googleapis-common-protos==1.63.2
-gradio==4.22.0
-gradio_client==0.13.0
-graphviz==0.20.3
-greenlet==3.0.3
-grpcio==1.63.0
-h11==0.14.0
-hjson==3.1.0
-httpcore==1.0.4
-httpx==0.27.0
-huggingface-hub==0.24.3
-idna==3.4
-importlib-metadata==7.0.0
-importlib-resources==5.12.0
-iniconfig==2.0.0
-isort==5.13.2
-Jinja2==3.1.2
-joblib==1.3.2
-jsonpatch==1.33
+accelerate==1.6.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiosignal==1.3.2
+anyio==4.9.0
+argon2-cffi==23.1.0
+argon2-cffi-bindings==21.2.0
+arrow==1.3.0
+asttokens==3.0.0
+async-lru==2.0.5
+attrs==25.3.0
+babel==2.17.0
+beautifulsoup4==4.13.4
+bitsandbytes==0.45.5
+bleach==6.2.0
+certifi==2025.4.26
+cffi==1.17.1
+charset-normalizer==3.4.2
+comm==0.2.2
+contourpy==1.3.2
+cycler==0.12.1
+datasets==3.6.0
+debugpy==1.8.14
+decorator==5.2.1
+defusedxml==0.7.1
+dill==0.3.8
+einops==0.8.1
+evaluate==0.4.3
+executing==2.2.0
+fastjsonschema==2.21.1
+filelock==3.18.0
+flash-attn==2.7.4.post1
+fonttools==4.57.0
+fqdn==1.5.1
+frozenlist==1.6.0
+fsspec==2025.3.0
+h11==0.16.0
+hf-xet==1.1.0
+httpcore==1.0.9
+httpx==0.28.1
+huggingface-hub==0.31.1
+idna==3.10
+ipykernel==6.29.5
+ipython==9.2.0
+ipython_pygments_lexers==1.1.1
+ipywidgets==8.1.7
+isoduration==20.11.0
+jedi==0.19.2
+Jinja2==3.1.6
+joblib==1.5.0
+json5==0.12.0
 jsonpointer==3.0.0
-jsonschema==4.21.1
-jsonschema-specifications==2023.12.1
-kiwisolver==1.4.4
-langchain==0.2.12
-langchain-community==0.2.11
-langchain-core==0.2.28
-langchain-openai==0.1.20
-langchain-text-splitters==0.2.2
-langsmith==0.1.96
-lightgbm==4.0.0
-lit==16.0.6
+jsonschema==4.23.0
+jsonschema-specifications==2025.4.1
+jupyter==1.1.1
+jupyter-console==6.6.3
+jupyter-events==0.12.0
+jupyter-lsp==2.2.5
+jupyter_client==8.6.3
+jupyter_core==5.7.2
+jupyter_server==2.15.0
+jupyter_server_terminals==0.5.3
+jupyterlab==4.4.2
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+jupyterlab_widgets==3.0.15
+kiwisolver==1.4.8
 markdown-it-py==3.0.0
-markdown2==2.4.13
-MarkupSafe==2.1.3
-marshmallow==3.21.3
-matplotlib==3.7.1
-mccabe==0.7.0
+MarkupSafe==3.0.2
+matplotlib==3.10.3
+matplotlib-inline==0.1.7
 mdurl==0.1.2
+mistune==3.1.3
 mpmath==1.3.0
-multidict==6.0.4
-multiprocess==0.70.14
-mypy-extensions==1.0.0
+multidict==6.4.3
+multiprocess==0.70.16
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
 nest-asyncio==1.6.0
-networkx==3.1
-nh3==0.2.15
-ninja==1.11.1.1
-numpy==1.25.0
-nvidia-cublas-cu11==11.10.3.66
-nvidia-cublas-cu12==12.1.3.1
-nvidia-cuda-cupti-cu11==11.7.101
-nvidia-cuda-cupti-cu12==12.1.105
-nvidia-cuda-nvrtc-cu11==11.7.99
-nvidia-cuda-nvrtc-cu12==12.1.105
-nvidia-cuda-runtime-cu11==11.7.99
-nvidia-cuda-runtime-cu12==12.1.105
-nvidia-cudnn-cu11==8.5.0.96
-nvidia-cudnn-cu12==8.9.2.26
-nvidia-cufft-cu11==10.9.0.58
-nvidia-cufft-cu12==11.0.2.54
-nvidia-curand-cu11==10.2.10.91
-nvidia-curand-cu12==10.3.2.106
-nvidia-cusolver-cu11==11.4.0.1
-nvidia-cusolver-cu12==11.4.5.107
-nvidia-cusparse-cu11==11.7.4.91
-nvidia-cusparse-cu12==12.1.0.106
-nvidia-nccl-cu11==2.14.3
-nvidia-nccl-cu12==2.19.3
-nvidia-nvjitlink-cu12==12.5.82
-nvidia-nvtx-cu11==11.7.91
-nvidia-nvtx-cu12==12.1.105
-openai==1.38.0
-opentelemetry-api==1.24.0
-opentelemetry-exporter-otlp-proto-common==1.24.0
-opentelemetry-exporter-otlp-proto-grpc==1.24.0
-opentelemetry-proto==1.24.0
-opentelemetry-sdk==1.24.0
-opentelemetry-semantic-conventions==0.45b0
-orjson==3.9.15
-packaging==24.1
-pandas==2.0.2
-pathspec==0.12.1
-pathtools==0.1.2
-peft==0.10.0
-Pillow==9.5.0
-platformdirs==4.2.0
-plotly==5.23.0
-pluggy==1.4.0
-portalocker==2.10.1
-prompt-toolkit==3.0.43
-protobuf==4.25.1
-psutil==5.9.5
-py-cpuinfo==9.0.0
-pyarrow==12.0.1
-pyarrow-hotfix==0.6
-pycodestyle==2.11.1
-pydantic==2.6.4
-pydantic-settings==2.2.1
-pydantic_core==2.16.3
-pydub==0.25.1
-pyflakes==3.2.0
-Pygments==2.17.2
-pynvml==11.5.0
-pyparsing==3.1.0
-pysbd==0.3.4
-pytest==8.1.1
-pytest-repeat==0.9.3
-pytest-xdist==3.6.1
-python-dateutil==2.8.2
-python-dotenv==1.0.1
-python-multipart==0.0.9
-pytz==2023.3
-PyYAML==6.0
-ragas==0.1.12
-referencing==0.34.0
-regex==2023.6.3
-requests==2.31.0
-responses==0.18.0
-rich==13.7.0
-rpds-py==0.18.0
-ruff==0.3.3
-safetensors==0.4.2
-scikit-learn==1.4.1.post1
-scipy==1.10.1
+networkx==3.3
+notebook==7.4.2
+notebook_shim==0.2.4
+numpy==2.2.5
+nvidia-cublas-cu12==12.6.4.1
+nvidia-cuda-cupti-cu12==12.6.80
+nvidia-cuda-nvrtc-cu12==12.6.77
+nvidia-cuda-runtime-cu12==12.6.77
+nvidia-cudnn-cu12==9.5.1.17
+nvidia-cufft-cu12==11.3.0.4
+nvidia-cufile-cu12==1.11.1.6
+nvidia-curand-cu12==10.3.7.77
+nvidia-cusolver-cu12==11.7.1.2
+nvidia-cusparse-cu12==12.5.4.2
+nvidia-cusparselt-cu12==0.6.3
+nvidia-nccl-cu12==2.26.2
+nvidia-nvjitlink-cu12==12.6.85
+nvidia-nvtx-cu12==12.6.77
+overrides==7.7.0
+packaging==25.0
+pandas==2.2.3
+pandocfilters==1.5.1
+parso==0.8.4
+peft==0.15.2
+pexpect==4.9.0
+pillow==11.2.1
+platformdirs==4.3.8
+prometheus_client==0.21.1
+prompt_toolkit==3.0.51
+propcache==0.3.1
+psutil==7.0.0
+ptyprocess==0.7.0
+pure_eval==0.2.3
+pyarrow==20.0.0
+pycparser==2.22
+Pygments==2.19.1
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+python-json-logger==3.3.0
+pytz==2025.2
+PyYAML==6.0.2
+pyzmq==26.4.0
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.3
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rich==14.0.0
+rpds-py==0.24.0
+safetensors==0.5.3
+scikit-learn==1.6.1
+scipy==1.15.3
 seaborn==0.13.2
-semantic-version==2.10.0
-sentencepiece==0.1.99
-sentry-sdk==1.25.1
-setproctitle==1.3.2
-shellingham==1.5.4
-shortuuid==1.0.13
-shtab==1.7.0
-six==1.16.0
-smmap==5.0.0
+Send2Trash==1.8.3
+sentencepiece==0.2.0
+six==1.17.0
 sniffio==1.3.1
-SQLAlchemy==2.0.31
-starlette==0.36.3
-svgwrite==1.4.3
-sympy==1.12
-tabulate==0.9.0
-tenacity==8.4.2
-threadpoolctl==3.3.0
-tiktoken==0.7.0
-tokenizers==0.19.1
-tomli==2.0.1
-tomlkit==0.12.0
-toolz==0.12.1
-torch==2.1.0
-tqdm==4.65.0
-transformers==4.43.4
-triton==2.2.0
-trl==0.8.5
-typer==0.9.0
-typing-inspect==0.9.0
-typing_extensions==4.10.0
-tyro==0.7.3
-tzdata==2023.3
-urllib3==2.0.3
-uvicorn==0.29.0
-wandb==0.15.4
-wavedrom==2.0.3.post3
+soupsieve==2.7
+stack-data==0.6.3
+sympy==1.13.3
+terminado==0.18.1
+threadpoolctl==3.6.0
+tinycss2==1.4.0
+tokenizers==0.21.1
+torch==2.7.0+cu126
+tornado==6.4.2
+tqdm==4.67.1
+traitlets==5.14.3
+transformers==4.51.3
+triton==3.3.0
+trl==0.17.0
+types-python-dateutil==2.9.0.20241206
+typing_extensions==4.13.2
+tzdata==2025.2
+uri-template==1.3.0
+urllib3==2.4.0
 wcwidth==0.2.13
-websockets==11.0.3
-wrapt==1.16.0
-xxhash==3.2.0
-yarl==1.9.2
-zipp==3.19.2
+webcolors==24.11.1
+webencodings==0.5.1
+websocket-client==1.8.0
+widgetsnbextension==4.0.14
+xxhash==3.5.0
+yarl==1.20.0
