--- a/scripts/accelerate_configs/accelerate_deepspeed_zero3.yaml
+++ b/scripts/accelerate_configs/accelerate_deepspeed_zero3.yaml
@@ -2,7 +2,7 @@ compute_environment: LOCAL_MACHINE
 debug: false
 deepspeed_config:
   deepspeed_config_file: /nas/ucb/eop/Reward-Model-Overoptimization/scripts/accelerate_configs/deepspeed_zero3.json
-  zero3_init_flag: true
+  zero3_init_flag: false
 distributed_type: DEEPSPEED
 machine_rank: 0
 main_training_function: main
